--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="쉽고 간편하게 등록하는 나만의 메모!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="콜라비즈 메모 :: 쉽고 간편하게 등록하는 나만의 메모" />
+    <meta property="og:description" content="언제 어디서든 쉽고 편하게 메모하세요!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>COLLABIZ TOY</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
